
add_library(gui_qt OBJECT
        ../headless/HeadlessGuiFactory.cc
        ArrowKeyLineEdit.cc
        DateValidator.cc
        GuiMFMSettings.cc
        GuiQwtPlot.cc
        GuiQtApplHeader.cc
        GuiQtButton.cc
        GuiQtButtonbar.cc
        GuiQtComboBox.cc
        GuiQtCycleButton.cc
        GuiQtCycleDialog.cc
        GuiQtCycleDialog.cc
        GuiQtDataField.cc
        GuiQtDiagram.cc
        GuiQtDiagramItem.cc
        GuiQtDiagramScene.cc
        GuiQtDialog.cc
        GuiQtElement.cc
        GuiQtFactory.cc
        GuiQtFieldButton.cc
        GuiQtFieldButton.cc
        GuiQtFieldgroup.cc
        GuiQtFieldgroupLine.cc
        GuiQtFilterList.cc
        GuiQtFolder.cc
        GuiQtFolderUndoElement.cc
        GuiQtForm.cc
        GuiQtImage.cc
        GuiQtIndex.cc
        GuiQtIndexMenu.cc
        GuiQtLabel.cc
        GuiQtLinePlot.cc
        GuiQtList.cc
        GuiQtListView.cc
        GuiQtManager.cc
        GuiQtMenuButton.cc
        GuiQtMenuToggle.cc
        GuiQtMenubar.cc
        GuiQtMessageLine.cc
        GuiQtMinMaxColorMap.cc
        GuiQtNavElement.cc
        GuiQtNavNode.cc
        GuiQtNavRoot.cc
        GuiQtNavSetfield.cc
        GuiQtNavStructFolder.cc
        GuiQtNavTextfield.cc
        GuiQtNavView.cc
        GuiQtNavigator.cc
        GuiQtNavigatorMenu.cc
        GuiQtOrientationContainer.cc
        GuiQtPixmap.cc
        GuiQtPopupMenu.cc
        GuiQtPrinterDialog.cc
        GuiQtPulldownMenu.cc
        GuiQtRadioButton.cc
        GuiQtScrolledText.cc
        GuiQtScrolledlist.cc
        GuiQtSeparator.cc
        GuiQtSvgView.cc
        GuiQtTable.cc
        GuiQtTableComboBoxItem.cc
        GuiQtTableDataItem.cc
        GuiQtTableLabelItem.cc
        GuiQtTableViewBase.cc
        GuiQtText.cc
        GuiQtTextfield.cc
        GuiQtToggle.cc
        GuiQwt3dPlot.cc
        GuiQwtContourPlot.cc
        GuiQwtContourPlotData.cc
        GuiQwtPlotBarChart.cc
        GuiQwtPlotCurveData.cc
        GuiQwtPlotLayout.cc
        GuiQwtPlotPicker.cc
        GuiQwtPlotScalePicker.cc
        GuiQwtPlotZoomer.cc
        GuiQtPolarPlot.cc
        GuiQwtPolarPlot.cc
        GuiQwtPropertyDialog.cc
        GuiQwtScaleDraw.cc
        GuiQwtScaleEngine.cc
        GuiQwtSlider.cc
        GuiQwtThermo.cc
        GuiQtProgressBar.cc
        HelpWindow.cc
        KNumValidator.cpp
        PlotCurve.cpp
        QProgressIndicator.cpp
        QtDialogCompare.cc
        QtDialogConfirmation.cc
        QtDialogCopyright.cc
        QtDialogFileSelection.cc
        QtDialogInformation.cc
        QtDialogInput.cc
        QtDialogInputExt.cc
        QtDialogProgressBar.cc
        QtDialogUserPassword.cc
        QtDialogWarning.cc
        QtDialogWorkClock.cc
        QtHardCopyTree.cc
        QtIconManager.cc
        QtInputDialog.cc
        QtMessageBox.cc
        QtMessageBoxExt.cc
        QtMultiFontString.cc
        QtSimpleAction.cc
        QtTimer.cc
        GuiQwtBasePlot.cc
        printpreview.cpp
        stylesheeteditor.cpp
        )

target_include_directories(gui_qt
        PRIVATE
        ${PROJECT_SOURCE_DIR}
        ${PROJECT_SOURCE_DIR}/src
        ${CMAKE_BINARY_DIR}/src )

target_link_libraries(gui_qt
  PRIVATE
  LibXml2::LibXml2
  Qt::Widgets
  Qt::Network
  Qt::PrintSupport)
